fixed z-index on modal close button, modified modal styles, changed modal portal div

--- a/src/styles/components/_image.scss
+++ b/src/styles/components/_image.scss
@@ -54,14 +54,17 @@
 
 @keyframes noisy-glow {
   0% {
-    box-shadow: 0 0 12px 2px rgba(255, 255, 255, 0);
+    box-shadow: 0 0 6px 2px rgba(255, 255, 255, 0);
+    border-color: variables.$color-devastator;
   }
 
   50% {
-    box-shadow: 0 0 12px 2px rgba(255, 255, 255, 1);
+    box-shadow: 0 0 12px 2px rgba(255, 255, 255, 0.5);
+    border-color: variables.$color-ramjet;
   }
 
   100% {
-    box-shadow: 0 0 12px 2px rgba(255, 255, 255, 0);
+    box-shadow: 0 0 6px 2px rgba(255, 255, 255, 0);
+    border-color: variables.$color-devastator;
   }
 }
